# src/main/java/com/nxg/nxgecomm/api/model/User.java
@@ -10,75 +10,75 @@ import javax.validation.Valid;
 import javax.validation.constraints.*;
 
 /**
- * CustomerDetails
+ * User
  */
 @javax.annotation.Generated(value = "org.openapitools.codegen.languages.SpringCodegen", date = "2023-03-20T12:25:04.400672700+05:30[Asia/Calcutta]")
 
-public class CustomerDetails   {
-  @JsonProperty("id")
-  private Integer id;
+public class User   {
+  @JsonProperty("user_id")
+  private Integer userId;
 
-  @JsonProperty("name")
-  private String name;
+  @JsonProperty("seller_id")
+  private Integer sellerId;
 
   @JsonProperty("email")
   private String email;
 
+  @JsonProperty("username")
+  private String username;
+
   @JsonProperty("mobile")
-  private String mobile;
+  private Integer mobile;
 
   @JsonProperty("password")
   private String password;
 
-  @JsonProperty("currencyId")
-  private Integer currencyId;
+  @JsonProperty("seller_password")
+  private String sellerPassword;
 
-  @JsonProperty("isGuest")
-  private Integer isGuest;
-
-  public CustomerDetails id(Integer id) {
-    this.id = id;
+  public User userId(Integer userId) {
+    this.userId = userId;
     return this;
   }
 
   /**
-   * Get id
-   * @return id
+   * Get userId
+   * @return userId
   */
   @ApiModelProperty(required = true, value = "")
   @NotNull
 
 @Size(max=11) 
-  public Integer getId() {
-    return id;
+  public Integer getUserId() {
+    return userId;
   }
 
-  public void setId(Integer id) {
-    this.id = id;
+  public void setUserId(Integer userId) {
+    this.userId = userId;
   }
 
-  public CustomerDetails name(String name) {
-    this.name = name;
+  public User sellerId(Integer sellerId) {
+    this.sellerId = sellerId;
     return this;
   }
 
   /**
-   * Get name
-   * @return name
+   * Get sellerId
+   * @return sellerId
   */
   @ApiModelProperty(required = true, value = "")
   @NotNull
 
-@Size(max=120) 
-  public String getName() {
-    return name;
+@Size(max=11) 
+  public Integer getSellerId() {
+    return sellerId;
   }
 
-  public void setName(String name) {
-    this.name = name;
+  public void setSellerId(Integer sellerId) {
+    this.sellerId = sellerId;
   }
 
-  public CustomerDetails email(String email) {
+  public User email(String email) {
     this.email = email;
     return this;
   }
@@ -90,7 +90,7 @@ public class CustomerDetails   {
   @ApiModelProperty(required = true, value = "")
   @NotNull
 
-@Size(max=250) 
+@Size(max=200) 
   public String getEmail() {
     return email;
   }
@@ -99,7 +99,28 @@ public class CustomerDetails   {
     this.email = email;
   }
 
-  public CustomerDetails mobile(String mobile) {
+  public User username(String username) {
+    this.username = username;
+    return this;
+  }
+
+  /**
+   * Get username
+   * @return username
+  */
+  @ApiModelProperty(required = true, value = "")
+  @NotNull
+
+@Size(max=100) 
+  public String getUsername() {
+    return username;
+  }
+
+  public void setUsername(String username) {
+    this.username = username;
+  }
+
+  public User mobile(Integer mobile) {
     this.mobile = mobile;
     return this;
   }
@@ -112,15 +133,15 @@ public class CustomerDetails   {
   @NotNull
 
 @Size(max=10) 
-  public String getMobile() {
+  public Integer getMobile() {
     return mobile;
   }
 
-  public void setMobile(String mobile) {
+  public void setMobile(Integer mobile) {
     this.mobile = mobile;
   }
 
-  public CustomerDetails password(String password) {
+  public User password(String password) {
     this.password = password;
     return this;
   }
@@ -129,9 +150,10 @@ public class CustomerDetails   {
    * Get password
    * @return password
   */
-  @ApiModelProperty(value = "")
+  @ApiModelProperty(required = true, value = "")
+  @NotNull
 
-@Size(max=120) 
+@Size(max=200) 
   public String getPassword() {
     return password;
   }
@@ -140,45 +162,25 @@ public class CustomerDetails   {
     this.password = password;
   }
 
-  public CustomerDetails currencyId(Integer currencyId) {
-    this.currencyId = currencyId;
+  public User sellerPassword(String sellerPassword) {
+    this.sellerPassword = sellerPassword;
     return this;
   }
 
   /**
-   * Get currencyId
-   * @return currencyId
-  */
-  @ApiModelProperty(value = "")
-
-@Size(max=11) 
-  public Integer getCurrencyId() {
-    return currencyId;
-  }
-
-  public void setCurrencyId(Integer currencyId) {
-    this.currencyId = currencyId;
-  }
-
-  public CustomerDetails isGuest(Integer isGuest) {
-    this.isGuest = isGuest;
-    return this;
-  }
-
-  /**
-   * Get isGuest
-   * @return isGuest
+   * Get sellerPassword
+   * @return sellerPassword
   */
   @ApiModelProperty(required = true, value = "")
   @NotNull
 
-@Size(max=1) 
-  public Integer getIsGuest() {
-    return isGuest;
+@Size(max=200) 
+  public String getSellerPassword() {
+    return sellerPassword;
   }
 
-  public void setIsGuest(Integer isGuest) {
-    this.isGuest = isGuest;
+  public void setSellerPassword(String sellerPassword) {
+    this.sellerPassword = sellerPassword;
   }
 
 
@@ -190,33 +192,33 @@ public class CustomerDetails   {
     if (o == null || getClass() != o.getClass()) {
       return false;
     }
-    CustomerDetails customerDetails = (CustomerDetails) o;
-    return Objects.equals(this.id, customerDetails.id) &&
-        Objects.equals(this.name, customerDetails.name) &&
-        Objects.equals(this.email, customerDetails.email) &&
-        Objects.equals(this.mobile, customerDetails.mobile) &&
-        Objects.equals(this.password, customerDetails.password) &&
-        Objects.equals(this.currencyId, customerDetails.currencyId) &&
-        Objects.equals(this.isGuest, customerDetails.isGuest);
+    User user = (User) o;
+    return Objects.equals(this.userId, user.userId) &&
+        Objects.equals(this.sellerId, user.sellerId) &&
+        Objects.equals(this.email, user.email) &&
+        Objects.equals(this.username, user.username) &&
+        Objects.equals(this.mobile, user.mobile) &&
+        Objects.equals(this.password, user.password) &&
+        Objects.equals(this.sellerPassword, user.sellerPassword);
   }
 
   @Override
   public int hashCode() {
-    return Objects.hash(id, name, email, mobile, password, currencyId, isGuest);
+    return Objects.hash(userId, sellerId, email, username, mobile, password, sellerPassword);
   }
 
   @Override
   public String toString() {
     StringBuilder sb = new StringBuilder();
-    sb.append("class CustomerDetails {\n");
+    sb.append("class User {\n");
     
-    sb.append("    id: ").append(toIndentedString(id)).append("\n");
-    sb.append("    name: ").append(toIndentedString(name)).append("\n");
+    sb.append("    userId: ").append(toIndentedString(userId)).append("\n");
+    sb.append("    sellerId: ").append(toIndentedString(sellerId)).append("\n");
     sb.append("    email: ").append(toIndentedString(email)).append("\n");
+    sb.append("    username: ").append(toIndentedString(username)).append("\n");
     sb.append("    mobile: ").append(toIndentedString(mobile)).append("\n");
     sb.append("    password: ").append(toIndentedString(password)).append("\n");
-    sb.append("    currencyId: ").append(toIndentedString(currencyId)).append("\n");
-    sb.append("    isGuest: ").append(toIndentedString(isGuest)).append("\n");
+    sb.append("    sellerPassword: ").append(toIndentedString(sellerPassword)).append("\n");
     sb.append("}");
     return sb.toString();
   }
